--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     text-align: center;
+	
 }
 /*
  * Styles for modal
@@ -12,56 +13,39 @@ body {
      width: 100%;
      height: 100%;
      background: rgba(0,0,0, 0.5);
+
  }
 
  .modal_content {
   position: fixed;
   width: 400px;
-  top: 40%;
+  top: 30%;
   left: 50%;
-  background: #ffffff;
+  background: #293249;
+  border-radius: 10px;
+  color: white;
   transform: translate(-50%, -50%);
 }
 
 .modal_heading {
-    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 10px;
     border-bottom: 1.5px solid gray;
 }
 
-.modal_close, .modal_close:hover {
-    font-size: 25px;
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-/*.modal_stats {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 0 15px 0;
-    border-bottom: 1.5px solid gray;
-}*/
-
-#won {
+#won  {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 10px 0px;
 }
 
-.modal_buttons {
-    display: flex;
-    justify-content: space-around;
-    padding: 15px 0 0 15px;
-}
-
 .modal_button {
     width: 60px;
     height: 30px;
     margin-bottom: 15px;
+    border-radius: 4px;
 }
 
 .hide {
